moodle-virtuallabx/moodle-cronjob.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: moodle-cron
  annotations:
    reloader.stakater.com/auto: "true"
  name: moodle-cron
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle-cron
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: moodle-cron
    spec:
      containers:
        - image: ghcr.io/eol-uchile/moodle-vlabx-docker:8566546abee0d0bf606a56104d02c30f87c839ae
          name: moodle-cron
          command: ["/bin/sh"]
          args: ["-c", "trap exit TERM; while :; do php /var/www/html/admin/cli/cron.php; sleep 1m & wait $${!}; done;"]
          volumeMounts:
            - mountPath: /var/www/html/config.php
              name: config
              subPath: moodle.php
            - mountPath: /tmp
              name: tmpfs
            - mountPath: /var/www/moodledata
              name: data
              readOnly: true
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: tmpfs
          emptyDir: {}
        - name: config
          secret:
            secretName: moodle-config
        - name: data
          persistentVolumeClaim:
            claimName: moodle-volume
