moodle-virtuallabx/moodle-dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: moodle-dev
  annotations:
    reloader.stakater.com/auto: "true"
  name: moodle-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle-dev
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: moodle-dev
    spec:
      containers:
        - image: ghcr.io/eol-uchile/moodle-vlabx-docker:8566546abee0d0bf606a56104d02c30f87c839ae
          name: moodle-docker
          volumeMounts:
            - mountPath: /var/www/html/config.php
              name: moodle-config
              subPath: moodle.php
            - mountPath: /tmp
              name: tmpfs
            - mountPath: /var/www/moodledata
              name: data
          securityContext:
            readOnlyRootFilesystem: false
        - image: ghcr.io/eol-uchile/moodle-vlabx-docker:8566546abee0d0bf606a56104d02c30f87c839ae
          name: moodle-cron
          command: ["/bin/sh"]
          args: ["-c", "trap exit TERM; while :; do php /var/www/html/admin/cli/cron.php; sleep 1m & wait $${!}; done;"]
          volumeMounts:
            - mountPath: /var/www/html/config.php
              name: moodle-config
              subPath: moodle.php
            - mountPath: /tmp
              name: tmpfs
            - mountPath: /var/www/moodledata
              name: data
          securityContext:
            readOnlyRootFilesystem: true
        - image: ghcr.io/eol-uchile/moodle-vlabx-docker:nginx-8566546abee0d0bf606a56104d02c30f87c839ae
          name: moodle-nginx
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/
              readOnly: false
            - mountPath: /moodle/dataroot
              name: data
              readOnly: false
      volumes:
        - name: tmpfs
          emptyDir: {}
        - name: moodle-config
          secret:
            secretName: moodle-dev-config
        - name: data
          persistentVolumeClaim:
            claimName: moodle-dev-volume
        - name: nginx-config
          configMap:
            name: moodle-dev-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: moodle-dev
  labels:
    app: moodle-dev
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: moodle-dev
