moodle-virtuallabx/moodle-nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: moodle-nginx
  name: moodle-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle-nginx
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: moodle-nginx
    spec:
      containers:
        - image: nginx:stable-alpine
          name: moodle-nginx
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/conf.d/
              readOnly: false
            - mountPath: /moodle/dataroot
              name: data
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: moodle-nginx-config
        - name: data
          persistentVolumeClaim:
            claimName: moodle-volume
---
apiVersion: v1
kind: Service
metadata:
  name: moodle-nginx
  labels:
    app: moodle-nginx
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: moodle-nginx
