moodle-virtuallabx/moodle4-dev-static.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: moodle4-dev-static
  name: moodle4-dev-static
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle4-dev-static
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: moodle4-dev-static
    spec:
      nodeSelector:
        kubernetes.io/hostname: cloud-elearning01
      containers:
        - image: ghcr.io/eol-uchile/moodle-vlabx-docker:nginx-656d0426a88eb39d8c8a1d70cc9b840916f32a6f
          name: moodle-static
---
apiVersion: v1
kind: Service
metadata:
  name: moodle4-dev-static
  labels:
    app: moodle4-dev-static
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: moodle4-dev-static
