moodle-virtuallabx/moodle4-dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: moodle4-dev
  annotations:
    reloader.stakater.com/auto: "true"
  name: moodle4-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle4-dev
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: moodle4-dev
    spec:
      nodeSelector:
        kubernetes.io/hostname: cloud-elearning01
      containers:
        - image: ghcr.io/eol-uchile/moodle-vlabx-docker:656d0426a88eb39d8c8a1d70cc9b840916f32a6f
          name: moodle-docker
          volumeMounts:
            - mountPath: /var/www/html/config.php
              name: config
              subPath: moodle.php
            - mountPath: /tmp
              name: tmpfs
            - mountPath: /var/www/moodledata
              name: data
          securityContext:
            readOnlyRootFilesystem: false
      volumes:
        - name: tmpfs
          emptyDir: {}
        - name: config
          secret:
            secretName: moodle4-dev-config
        - name: data
          hostPath:
            path: /home/eol/virtuallabx/moodle/data
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: moodle4-dev
  labels:
    app: moodle4-dev
spec:
  ports:
    - port: 9000
      protocol: TCP
  selector:
    app: moodle4-dev
