moodle-virtuallabx/postgres-dev.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: postgres-dev
  name: postgres-dev
spec:
  replicas: 1
  serviceName: "postgres-dev"
  selector:
    matchLabels:
      app: postgres-dev
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: postgres-dev
    spec:
      containers:
        - image: postgres:13
          name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: pglib
      volumes:
        - name: pglib
          persistentVolumeClaim:
            claimName: postgres-dev-volume
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-dev
  labels:
    app: postgres-dev
spec:
  ports:
    - port: 5432
      protocol: TCP
  selector:
    app: postgres-dev
