moodle-virtuallabx/postgres.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  replicas: 1
  serviceName: "postgres"
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: postgres
    spec:
      containers:
        - image: postgres:13
          name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: pglib
      volumes:
        - name: pglib
          persistentVolumeClaim:
            claimName: postgres-volume
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      protocol: TCP
  selector:
    app: postgres
