moodle-virtuallabx/unavailable.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: not-available-nginx-svc
  labels:
    app: not-available-nginx
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: not-available-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-available-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: not-available-nginx
  template:
    metadata:
      labels:
        app: not-available-nginx
    spec:
      containers:
        - name: not-available-eol
          image: ghcr.io/eol-uchile/not-available-container:virtuallabx-5d2e006f1a251e0c874ae1772b36c4cf626273db
          ports:
            - containerPort: 80
