moodle-virtuallabx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle-nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/custom-headers: ingress-nginx/cm-robots-none-headers
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_force_ranges "On";
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: moodle-tls-secret
      hosts:
        - ing.virtual-labx.cl
  rules:
    - host: ing.virtual-labx.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moodle-nginx
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodle-dev-nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/custom-headers: ingress-nginx/cm-robots-none-headers
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_force_ranges "On";
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: moodle-dev-tls-secret
      hosts:
        - ing-dev.virtual-labx.cl
  rules:
    - host: ing-dev.virtual-labx.cl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moodle-dev-nginx
                port:
                  number: 80
